A launched imperfect product is better than an unlaunched, perfect product

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 ---
 ---
 
-Foo
+{% for post in site.posts %}
+  {% assign content = post.content %}
+  {% include post.html %}
+{% endfor %}
+
+{% if site.posts.size == 0 %}
+  <h1>You're here too early!</h1>
+  <p>
+    I haven't had time to write anything yet, but feel free to get in touch
+    either on <a href="https://www.twitter.com/jumoel">twitter</a> or
+    <a href="mailto:{{ site.email }}">email</a>.
+  </p>
+{% endif %}
