--- a/archive.html
+++ b/archive.html
@@ -10,7 +10,7 @@ title: Post archive
 {% assign year = false %}
 {% assign first = true %}
 
-{% for post in site.posts %}
+{% for post in site.posts reversed %}
   {% capture curr_year %}{{ post.date | date: "%Y "}}{% endcapture %}
 
   {% if year != curr_year %}
